# smc-paths

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  NOTICE  README.md  justfile
.github/workflows/: ci.yml
src/: aws.rs  azure.rs  builder.rs  errors.rs  formats.rs  gcp.rs  lib.rs  operations.rs  parameters.rs  prelude.rs  provider.rs  tests.rs  typed_path.rs
