[package]
name        = "smc-paths"
version     = "0.1.0"
edition     = "2024"
authors     = ["Octopilot <info@octopilot.app>"]
license     = "PolyForm-Shield-1.0.0"
description = "Type-safe API path builder for GCP Secret Manager, AWS Secrets Manager, and Azure Key Vault"
repository  = "https://github.com/octopilot/smc-paths"
keywords    = ["secrets", "gcp", "aws", "azure", "api-paths"]
categories  = ["development-tools", "web-programming"]
readme      = "README.md"

[lib]
name = "smc_paths"
path = "src/lib.rs"

# No external dependencies — this crate is pure Rust path-building logic.
